--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <ul class="navbar">
             <li><a href="#home" class="home-active">Home</a></li>
             <li><a href="#film">Movies</a></li>
-            <li><a href="#serietv">TV Shows</a></li>    
+            <li><a href="#serietv">TV Shows</a></li>
         </ul>
         <a href="#casuale" id="btn">Random</a>
 
@@ -543,6 +543,10 @@
             </div>
 
         </div>
+<div class="tasto-fondo">
+    <i class='bx bx-dice-6'></i>
+        <button type="button" id="btn2" onClick="window.location.reload()">Another Random</button>
+    </div>
     </section>
 
 
@@ -557,7 +561,6 @@
 
         getMovies("Marvel", CONTENT_TYPE.MOVIE);
         getSeries("Marvel", CONTENT_TYPE.SERIES);
-
 
     </script>
 
